Listing generator refactorings and cleanup